--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   install:
     commands:
       - echo Entered the install phase...
-      - apt-get update -y
+      # - apt-get update -y
       # - apt-get install -y maven
     finally:
       - echo This always runs even if the update or install command fails 
