--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,6 +2,9 @@ version: 0.2
 
 phases:
   install:
+    runtime-versions:
+      python: 3.7
+      # docker 18
     commands:
       - echo Entered the install phase...
       # - apt-get update -y
