--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,25 +4,24 @@ phases:
   install:
     commands:
       - echo Entered the install phase...
-      - apt-get update -y
-      # - apt-get install -y maven
+      - yum update
+      - yum upgrade
     finally:
       - echo This always runs even if the update or install command fails 
   pre_build:
     commands:
       - echo Entered the pre_build phase...
-      # - docker login –u User –p $LOGIN_PASSWORD
     finally:
       - echo This always runs even if the login command fails 
   build:
     commands:
       - echo Entered the build phase...
       - echo Build started on `date`
-     aws cloudformation validate-template --template-body file://module1/securityhub-remediations-workshop.yml
-      # - mvn install
+      - aws cloudformation create-stack --template-body file://module1/securityhub-remediations-workshop.yml --stack-name CodeBuild-SecurityHubRemediatations  --capabilities CAPABILITY_NAMED_IAM --parameters ParameterKey=VpcId,ParameterValue=CreateNew  --tags Key=CostCenter,Value=SecurityHubRemediatations-Codebuild
     finally:
       - echo This always runs even if the install command fails
   post_build:
     commands:
       - echo Entered the post_build phase...
       - echo Build completed on `date`
+      - aws cloudformation delete-stack --stack-name CodeBuild-SecurityHubRemediatations 
