--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,8 +6,8 @@ env:
 phases:
   install:
     runtime-versions:
-      # python: 3.7
-      docker: 18
+      python: 3.7
+      # docker: 18
     commands:
       - echo Entered the install phase...
       # - yum update -y
@@ -18,6 +18,8 @@ phases:
     commands:
       - echo Entered the pre_build phase...
       - aws --version
+      - uname -a
+      - env
     finally:
       - echo This always runs even if the login command fails 
   build:
@@ -26,10 +28,11 @@ phases:
       - echo Build started on `date`
       - aws cloudformation create-stack --template-body file://module1/securityhub-remediations-workshop.yml --stack-name $STACKNAME  --capabilities CAPABILITY_NAMED_IAM --parameters ParameterKey=VpcId,ParameterValue=CreateNew  --tags Key=CostCenter,Value=SecurityHubRemediations-Codebuild
       - aws cloudformation wait stack-create-complete --stack-name $STACKNAME --no-paginate 
+      - aws cloudformation delete-stack --stack-name $STACKNAME
     finally:
       - echo This always runs even if the install command fails
   post_build:
     commands:
       - echo Entered the post_build phase...
       - echo Build completed on `date`
-      - aws cloudformation delete-stack --stack-name CodeBuild-SecurityHubRemediatations 
+ 
