add validation action

--- a/module1/securityhub-remediations-workshop.yml
+++ b/module1/securityhub-remediations-workshop.yml
@@ -214,6 +214,7 @@ Resources:
               - "ec2:*Snapshot"
               - "ec2:ModifySnapshotAttribute"
               - "logs:GetLogEvents"
+              - "cloudformation:ValidateTemplate"
             Resource: "*"
     Metadata:
       cfn_nag:
