--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,8 +8,8 @@ repos:
     -   id: end-of-file-fixer
 #   -   id: check-yaml
     -   id: check-added-large-files
-# - repo: https://github.com/aws-cloudformation/cfn-python-lint
-#      rev: v0.26.2  # The version of cfn-lint to use
-#    hooks:
-#    -   id: cfn-python-lint
-#        files: module1/.*\.(json|yml|yaml)$
+-   repo: https://github.com/aws-cloudformation/cfn-python-lint
+    rev: v0.26.2  # The version of cfn-lint to use
+    hooks:
+    -   id: cfn-python-lint
+        files: module1/.*\.(json|yml|yaml)$
