--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,5 +51,6 @@ nav:
   - 'Module 4: Vulnerability Event on EC2 Instance with Very Risky Configuration': '04-ec2-instance-high-risk-config.md'
   - 'Module 5: GuardDuty Event on IAMUser': '05-guardduty-iam-user.md'
   - 'Module 6: Remediate an Public EBS-Snapshot': '06-ebs-snapshot-public.md'
+  - 'Module 7: Cleanup of resources: '07-cleanup.md'
   - Contributing: 'contribute.md'
   - License: 'license.md'
